--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   file-roller-3.28.1.tar.xz: 8d5b063e7eeec62b18115aa283ce3b08b9f3a38b
+  file-roller-3.30.1.tar.xz: a5bc76aea39bd693339c1c696021842643b2a391
